--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
+    "faker": "^4.1.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-random": "^1.1.2",
