--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,11 @@
   "proxy": "http://localhost:3001/",
   "dependencies": {
     "faker": "^4.1.0",
+    "jss": "^8.1.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-fontawesome": "^1.6.1",
+    "react-jss": "^7.1.0",
     "react-random": "^1.1.2",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^1.0.11"
