--- a/package.json
+++ b/package.json
@@ -38,5 +38,9 @@
     "eslint-plugin-react": "^7.3.0",
     "eslint-plugin-standard": "^3.0.1",
     "rimraf": "^2.6.1"
+  },
+  "dependencies": {
+    "express-session": "^1.15.5",
+    "passport": "^0.4.0"
   }
 }
